--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img id="odin-image" src="odin-lined.png" alt="Odin Logo">
             <h1>ODIN</h1>
         </div>
-        <p id="image-credit">Photo by <a>Halie West</a> on <a>Unsplash</a></p>
+        <p id="image-credit">Photo by <a target="_blank" href="https://unsplash.com/@haliewestphoto">Halie West</a> on <a target="_blank" href="https://unsplash.com/photos/green-leaf-plant-in-close-up-photography-25xggax4bSA">Unsplash</a></p>
         <img id="plant" src="halie-west-25xggax4bSA-unsplash.jpg" alt="Tranquil image of leaved plant.">
     </div>
     <div id="right-section">
