Style input div box shadow

--- a/index.html
+++ b/index.html
@@ -17,10 +17,8 @@
     </div>
     <div id="right-section">
         <p>
-            This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <em>now</em> to get started.
-        </p>
-        <p>
-            You <em>know</em> you want to.
+            This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
+            Sign up <em>now</em> to get started.<br><br>You <em>know</em> you want to.
         </p>
         <form id="form">
             <h3>Let's do this!</h3>
