--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
         <img id="plant" src="halie-west-25xggax4bSA-unsplash.jpg" alt="Tranquil image of leaved plant.">
     </div>
     <div id="right-section">
-        <p>
-            This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. 
+        <p id="call-to-action">
+            This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams.<br>
             Sign up <em>now</em> to get started.<br><br>You <em>know</em> you want to.
         </p>
         <form id="form">
             <h3>Let's do this!</h3>
-            <label>FIRST NAME<input type="text" id="first_name" name="user_first_name" placeholder="John" required></label>
-            <label>LAST NAME<input type="text" id="last_name" name="user_last_name" placeholder="Doe" required></label>
-            <label>EMAIL<input type="email" id="email" name="user_email" placeholder="myemail@myservice.com" required></label>
-            <label>PHONE NUMBER<input type="tel" id="phone" name="user_phone" placeholder="0491576398" required></label>
-            <label>PASSWORD<input type="password" id="password" name="user_password" required></label>
-            <label>CONFIRM PASSWORD<input type="password" id="password_confirm" name="user_password_confirm"required></label>
+            <div class="inputs">
+                <div class="name">
+                    <label>FIRST NAME<input type="text" id="first_name" name="user_first_name" placeholder="John" required></label>
+                    <label>LAST NAME<input type="text" id="last_name" name="user_last_name" placeholder="Doe" required></label>
+                </div>
+                <div class="contact">
+                    <label>EMAIL<input type="email" id="email" name="user_email" placeholder="myemail@myservice.com" required></label>
+                    <label>PHONE NUMBER<input type="tel" id="phone" name="user_phone" placeholder="0491576398" required></label>
+                </div>
+                <div class="password">
+                    <label>PASSWORD<input type="password" id="password" name="user_password" required></label>
+                    <label>CONFIRM PASSWORD<input type="password" id="password_confirm" name="user_password_confirm"required></label>
+                </div>
+            </div>
         </form>
-        <button type="submit" form="form">Create Account</button>
-        <p>Already have an account? <a>Log in</a></p>
+        <button id="submit" type="submit" form="form">Create Account</button>
+        <p id="log-in">Already have an account? <a href="">Log in</a></p>
     </div>
 </body>
 </html>
